# OW-AI-cyber-bio-actions-eval

./: Makefile  README.md  pyproject.toml
app/: app.py
notebooks/: 01_paper_results.ipynb
scripts/: run_eval.py  run_vllm_and_test.sh
scripts/db/: query_eval_db.py  remove_run_db.py  save_eval_to_db.py
src/: database.py  repository.py
src/llms/: vllm_deployed.py
src/scenarios/: bio.py  cyber.py  decision_making.py
src/tools/: base_tool.py  base_tool_repository.py  decision_making_tools.py
